name:                   objc-ffi
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Custom

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-imports -fwarn-unused-binds
  
  exposed-modules:      Foreign.ObjC
                        Foreign.ObjC.ObjCType
                        Foreign.ObjC.Object
                        Foreign.ObjC.SEL
                        Foreign.ObjC.Sig
  
  build-depends:        base >= 3 && < 5,
                        libffi-experiments
  
  extra-libraries:      objc
  
  if os(darwin)
    cpp-options:        -DMACOSX
  else
    cpp-options:        -DGNUSTEP
