name:                   objc-ffi
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Custom
build-depends:          gnustep-config
extra-tmp-files:        objc-ffi.buildinfo

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-imports -fwarn-unused-binds
  
  c-sources:            cbits/HSException.m
                        cbits/WrapExceptions.m
  
  exposed-modules:      Foreign.ObjC
                        Foreign.ObjC.Exception
                        Foreign.ObjC.ObjCType
                        Foreign.ObjC.Object
                        Foreign.ObjC.SEL
                        Foreign.ObjC.Sig
  
  build-depends:        base >= 3 && < 5,
                        libffi-experiments
  
  extra-libraries:      objc
  
  if os(darwin)
    frameworks:         Foundation
    cpp-options:        -DMACOSX
                        -D__OBJC2__
  else
    extra-libraries:    gnustep-base
    cpp-options:        -DGNUSTEP
    cc-options:         -DGNUSTEP
                        -D_NATIVE_OBJC_EXCEPTIONS=1
                        -fobjc-exceptions
                        -fconstant-string-class=NSConstantString
