name:                   objc-ffi
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Custom
build-depends:          gnustep-config
extra-tmp-files:        objc-ffi.buildinfo

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-imports -fwarn-unused-binds
  
  c-sources:            cbits/HSException.m
                        cbits/HSObject.m
                        cbits/Object.m
                        cbits/WrapExceptions.m
  
  exposed-modules:      Foreign.ObjC
                        Foreign.ObjC.Class
                        Foreign.ObjC.Exception
                        Foreign.ObjC.HSObject
                        Foreign.ObjC.Ivar
                        Foreign.ObjC.Method
                        Foreign.ObjC.MsgSend
                        Foreign.ObjC.ObjCType
                        Foreign.ObjC.Object
                        Foreign.ObjC.Protocol
                        Foreign.ObjC.Raw.Class
                        Foreign.ObjC.Raw.Exception
                        Foreign.ObjC.Raw.Ivar
                        Foreign.ObjC.Raw.Method
                        Foreign.ObjC.Raw.Object
                        Foreign.ObjC.Raw.Protocol
                        Foreign.ObjC.Raw.Selector
                        Foreign.ObjC.Raw.Utils
                        Foreign.ObjC.Selector
                        Foreign.ObjC.Sig
                        Foreign.ObjC.Types
  
  if os(darwin)
    exposed-modules:    Foreign.ObjC.Property
                        Foreign.ObjC.Raw.Property
  
  build-depends:        base >= 3 && < 5,
                        libffi-experiments
  
  extra-libraries:      objc
  
  cpp-options:          -D__OBJC2__
  cc-options:           -D__OBJC2__
  
  if os(darwin)
    frameworks:         Foundation
    cpp-options:        -DMACOSX
  else
    extra-libraries:    gnustep-base
    cpp-options:        -DGNUSTEP
    cc-options:         -DGNUSTEP
                        -D_NATIVE_OBJC_EXCEPTIONS=1
                        -fobjc-exceptions
                        -fconstant-string-class=NSConstantString
